Merge Two 2D Arrays by Summing Values